# Mobile-Covid-Sanitization-Bot

./: MQTT_drive.py  README.md  camera_stream.py  image_server.py  stream.py
covid_bot_description/: CMakeLists.txt  package.xml
covid_bot_description/meshes/: Motor_ECT_spacer_2_1.stl  bottle.stl  camera_link.stl  chasis.stl  top_part_bottle.stl
covid_bot_description/rviz/: model.rviz
covid_bot_description/urdf/: covid_bot.gazebo  covid_bot.xacro  materials.xacro
covid_bot_gazebo/: CMakeLists.txt  package.xml
covid_bot_gazebo/launch/: covid_bot_empty_world.launch  covid_bot_hospital_world.launch  covid_bot_house.launch  covid_bot_room.launch
covid_bot_gazebo/worlds/: narrow.world  room.world
covid_bot_slam/: CMakeLists.txt  package.xml
covid_bot_slam/launch/: covid_bot_slam.launch
covid_bot_slam/rviz/: model.rviz
covid_bot_teleop/: CMakeLists.txt  package.xml  setup.py
covid_bot_teleop/launch/: covid_bot_teleop_key.launch
covid_bot_teleop/nodes/: covid_bot_teleop_key
covid_description/: CMakeLists.txt  package.xml
covid_gazebo/: CMakeLists.txt  package.xml
covid_gazebo/launch/: drive01.launch  drive_room.launch  gazebo.launch  room.launch
covid_gazebo/worlds/: hospital.world
covid_navigation/: CMakeLists.txt  package.xml
covid_navigation/launch/: amcl.launch  bot_navigation.launch  gmapping.launch
covid_navigation/maps/: map.pgm  map.yaml
covid_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
original_description/: CMakeLists.txt  package.xml
templates/: image_server.html  index.html
(+19 files in other folders)
