<?xml version="1.0"?>
<package format="2">
  <name>covid_bot_description</name>
  <version>0.0.0</version>
  <description>The covid_bot_description package</description>
  <maintainer email="preethi.n1609@gmail.com">Preethi N</maintainer>

  <license>TODO</license>  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
